--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,7 +15,7 @@
     "@supabase/supabase-js": "^2.39.7",
     "axios": "^1.9.0",
     "clsx": "^2.1.0",
-    "next": "14.1.0",
+    "next": "^14.2.30",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.50.1",
