ci(workflow): export SUPABASE_KEY env for price refresh job

--- a/.github/workflows/refresh_prices.yml
+++ b/.github/workflows/refresh_prices.yml
@@ -10,6 +10,7 @@ jobs:
     runs-on: ubuntu-latest
     env:
       SUPABASE_URL: ${{ secrets.SUPABASE_URL }}
+      SUPABASE_KEY: ${{ secrets.SUPABASE_KEY }}
       SUPABASE_SERVICE_KEY: ${{ secrets.SUPABASE_SERVICE_KEY }}
       GOOGLE_API_KEY: ${{ secrets.GOOGLE_API_KEY }}
       KROGER_CLIENT_ID: ${{ secrets.KROGER_CLIENT_ID }}
