--- a/.gitignore
+++ b/.gitignore
@@ -1,49 +1,24 @@
 # Python
 __pycache__/
 *.py[cod]
-*$py.class
-*.so
-.Python
-build/
-develop-eggs/
-dist/
-downloads/
-eggs/
-.eggs/
-lib/
-lib64/
-parts/
-sdist/
-var/
-wheels/
-*.egg-info/
-.installed.cfg
-*.egg
 venv/
 .env
+.env.local
 
-# Node
+# Node.js  
 node_modules/
 .next/
-out/
-build/
-.DS_Store
-*.pem
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
+.vercel
 
-# IDE
-.idea/
+# IDE & System
 .vscode/
-*.swp
-*.swo
-
-# Project specific
+.DS_Store
 *.log
-.coverage
-htmlcov/
+
+# Database
+*.db
+*.sqlite
+
+# Testing
+.pytest_cache/
+coverage/
